Archive2/e0/f1df1d54b62e84/output
main.cpp:8:5: error: use of class template 'Vector2' requires template arguments
    Vector2 arf;
    ^
main.cpp:3:8: note: template is declared here
struct Vector2 {
       ^
1 error generated.
