Archive2/e0/f1df1d54b62e84/main.cpp

template <typename T = float>
struct Vector2 {
    
};

int main () {
    Vector2 arf;
}